--- a/index.html
+++ b/index.html
@@ -10,33 +10,49 @@
 
     <div class="MainMenu">
       <h1>Broadway Design</h1>
-      <ol>
-        <li><a href="#bahia">Home</a></li>
-        <li><a href="#process">Process</a></li>
-        <li><a href="#work">Work</a></li>
-        <li><a href="#team">Team</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ol>
+      <p>
+        <a class "btn-nav" href="#">Home</a>
+      </p>
+      <p>
+        <a class "btn-nav" href="#process">Process</a>
+      </p>
+      <p>
+        <a class "btn-nav" href="#work">Work</a>
+      </p>
+      <p>
+        <a class "btn-nav" href="#team">Team</a>
+      </p>
+      <p>
+        <a class "btn-nav" href="#contact">Contact</a>
+      </p>
+
     </div>
 
 
 
-    <div id="process">
+    <div class="supporting" id="process">
       <h2>Our Process</h2>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
-      <h3>Identify</h3>
-      <p>We focus on the most important detail.</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
-      <h3>Understand</h3>
-      <p>We study our projects inside and out.</p>
-      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
-      <h3>Execute</h3>
-      <p>We put everything we have into our work.</p>
+      <div class="supporting-item">
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
+        <h3>Identify</h3>
+        <p>We focus on the most important detail.</p>
+      </div>
+
+      <div class="supporting-item">
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
+        <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
+      </div>
+
+      <div class="supporting-item">
+        <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
+      </div>
     </div>
 
     <div class="MainMenu">
-      <h1>Designed in New York</h1>
-
+      <h2>Designed in New York</h2>
     </div>
 
     <div id="work">
@@ -44,6 +60,17 @@
       <h3>Comming Soon</h3>
     </div>
 
+    <div id="team">
+      <h2>Team</h2>
+      <h3>We're Hiring!</h3>
+    </div>
+
+    <div id="contact">
+      <h2>Contact</h2>
+      <h3>Phone: (555)-555-5555</h3>
+      <h3>E-mail: test@example.com</h3>
+      <h3>Twitter: @test</h3>
+    </div>
 
   </body>
 </html>
