Finaliza Archivos de la pagina

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="/resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-
-
+    <!-- Sección Principal de la pagina, Encabezado y menu de navegacion -->
     <div class="MainMenu">
       <h1>Broadway Design</h1>
       <p>
@@ -29,7 +28,7 @@
     </div>
 
 
-
+<!-- Sección Process -->
     <div class="supporting" id="process">
       <h2>Our Process</h2>
       <div class="supporting-item">
@@ -50,27 +49,46 @@
         <p>We put everything we have into our work.</p>
       </div>
     </div>
-
+<!-- Sección con imagen como el encabezado de la pagina -->
     <div class="MainMenu">
       <h2>Designed in New York</h2>
     </div>
-
-    <div id="work">
-      <h2>Portfolio</h2>
-      <h3>Comming Soon</h3>
+<!-- Sección Work o Portfolio -->
+    <div class="supporting" id="work">
+      <div class="supporting-item">
+        <h3>Portfolio</h3>
+        <p>Comming Soon</p>
+      </div>
     </div>
+<!-- Sección Team -->
+    <div class="supporting" id="team">
+      <div class="supporting-item">
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
+      </div>
 
-    <div id="team">
-      <h2>Team</h2>
-      <h3>We're Hiring!</h3>
     </div>
-
-    <div id="contact">
-      <h2>Contact</h2>
-      <h3>Phone: (555)-555-5555</h3>
-      <h3>E-mail: test@example.com</h3>
-      <h3>Twitter: @test</h3>
+<!-- Sección Contact -->
+    <div class="supporting" id="contact">
+      <div class="supporting-item">
+        <h2>Contact</h2>
+        <p>Phone: (555)-555-5555</p>
+        <p>E-mail: test@example.com</p>
+        <p>Twitter: @test</p>
+      </div>
     </div>
-
+<!-- Sección Footer -->
+    <div class="footer">
+      <p>
+        "
+        © Excursion
+        "
+        <a href="#"></a>
+        <a href="#process">Process</a>
+        <a href="#work">Work</a>
+        <a href="#team">Team</a>
+        <a href="#contact">Contact</a>
+      </p>
+    </div>
   </body>
 </html>
