Ajusta style y errores finales

--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway</title>
-    <link href="/resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
     <!-- Sección Principal de la pagina, Encabezado y menu de navegacion -->
     <div class="MainMenu">
       <h1>Broadway Design</h1>
       <p>
-        <a class "btn-nav" href="#">Home</a>
+        <a class="btn-nav" href="#">Home</a>
       </p>
       <p>
-        <a class "btn-nav" href="#process">Process</a>
+        <a class="btn-nav" href="#process">Process</a>
       </p>
       <p>
-        <a class "btn-nav" href="#work">Work</a>
+        <a class="btn-nav" href="#work">Work</a>
       </p>
       <p>
-        <a class "btn-nav" href="#team">Team</a>
+        <a class="btn-nav" href="#team">Team</a>
       </p>
       <p>
-        <a class "btn-nav" href="#contact">Contact</a>
+        <a class="btn-nav" href="#contact">Contact</a>
       </p>
 
     </div>
@@ -81,13 +81,14 @@
     <div class="footer">
       <p>
         "
-        © Excursion
-        "
-        <a href="#"></a>
-        <a href="#process">Process</a>
-        <a href="#work">Work</a>
-        <a href="#team">Team</a>
-        <a href="#contact">Contact</a>
+                 © Excursion
+                 "
+        <a class="btn-nav" href="#"></a>
+        <a class="btn-nav" href="#process">Process</a>
+        <a class="btn-nav" href="#work">Work</a>
+        <a class="btn-nav" href="#work">Work</a>
+        <a class="btn-nav" href="#team">Team</a>
+        <a class="btn-nav" href="#contact">Contact</a>
       </p>
     </div>
   </body>
