--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
         "
                  © Excursion
                  "
-        <a class="btn-nav" href="#"></a>
+        <a class="btn-nav" href="#">Home</a>
         <a class="btn-nav" href="#process">Process</a>
-        <a class="btn-nav" href="#work">Work</a>
         <a class="btn-nav" href="#work">Work</a>
         <a class="btn-nav" href="#team">Team</a>
         <a class="btn-nav" href="#contact">Contact</a>
